Fix octicons inclusion

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <meta charset="utf-8">
         <title>Reportr</title>
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="icon" type="image/png" href="static/images/icon.png">
+        <link rel="stylesheet" href="assets/octicons/octicons.css">
+        <link rel="icon" type="image/png" href="assets/images/icon.png">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-
+        <div id="page">
+            <div class="intro">
+                <h1><span class="octicon octicon-pulse"></span> Reportr</h1>
+                <p>Your life's personal dashboard.</p>
+            </div>
+        </div>
     </body>
 </html>
