Add preview to homepage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <div class="intro">
                 <h1><span class="octicon octicon-pulse"></span> Reportr</h1>
                 <p>Your life's personal dashboard.</p>
+
+                <div class="preview">
+                    <div class="container">
+                        <img src="https://raw.githubusercontent.com/Reportr/dashboard/master/preview.png" />
+                    </div>
+                </div>
             </div>
         </div>
     </body>
