Add monitor example

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="assets/octicons/octicons.css">
         <link rel="icon" type="image/png" href="assets/images/icon.png">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="description" content="Your life's personal dashboard. Open source application, easy to use and deploy.">
     </head>
     <body>
         <div id="page">
@@ -76,6 +77,14 @@
                                 <h4>Home</h4>
                                 <p>Measure and home ambient (temperature, humidity, sound and luminosity levels) using <a href="https://tessel.io/">tessel.io</a>.</p>
                                 <p><a href="https://github.com/Reportr/tracker-home-ambient">Learn more</a></p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature">
+                                <div class="icon"><span class="octicon octicon-dashboard"></span></div>
+                                <h4>Monitor</h4>
+                                <p>Monitor your computer (memory, cpu load) and send the data to reportr for a great visualization.</p>
+                                <p><a href="https://github.com/Reportr/tracker-machine">Learn more</a></p>
                             </div>
                         </div>
                     </div>
