Add more features

--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="feature">
+                                <div class="icon"><span class="octicon octicon-location"></span></div>
+                                <h4>Geo Data</h4>
+                                <p>Reportr lets you visualize geo events using the map visualization.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature">
+                                <div class="icon"><span class="octicon octicon-terminal"></span></div>
+                                <h4>REST API</h4>
+                                <p>The easy to use Reportr API lets you post and manage events using simple HTTP requests.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature">
+                                <div class="icon"><span class="octicon octicon-microscope"></span></div>
+                                <h4>Predict</h4>
+                                <p>Using machine learning, Reportr lets you predict the evolution of your data.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
